js/js.translator/testData/incremental/invalidation/toplevelProperties/lib1/l1.7.kt
val globalVal = 4

inline val inlineGlobalVal: Int
    get() = 3

var globalVar = "1"
